# obsidian-cloud-sync

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
migrations/: 001_initial.sql  002_indexes_and_audit.sql  003_vault_key.sql  004_vaults.sql
src/: audit.rs  background.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  ws.rs
src/admin/: handlers.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  password.rs  tokens.rs
src/devices/: handlers.rs
src/files/: handlers.rs  storage.rs
src/sync/: engine.rs  handlers.rs  models.rs
src/vaults/: mod.rs
src/web/: mod.rs
src/web/static/: app.js  index.html  style.css
tests/: integration.rs
