[package]
name = "obsidian-cloud-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "limit", "trace", "set-header"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rust-embed = "8"
sha2 = "0.10"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
subtle = "2"
dashmap = "6"
tokio-util = "0.7"
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tempfile = "3"
